it will have js codes for front ogic and back logic; define var and made function calls plus return statement.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="jumbotron">
       <h1 id="header">Princess Peach's Pizzaria</h1>
       <hr class="my-4">
-      <p class="lead">Weclome to Princess Peach's Pizzaria! Here, in the Mushroom Kingdom, no one makes a mad pizza like Princess Peach! Indugle your taste buds and be transported to to the Mushroom Kingdom with your first bite of her famous pie! Due to her numerous
+      <p class="lead">Weclome to Princess Peach's Pizzaria! Here, in the Mushroom Kingdom, no one makes a mean pizza like Princess Peach! Indugle your taste buds and be transported to to the Mushroom Kingdom with your first bite of her famous pie! Due to her numerous
         kidnappings, supply is limited... So order quick!</p>
     </div>
     <img src="img/pizza.jpg" id="pizza-product">
@@ -51,11 +51,13 @@
            <input type="checkbox" name="toppings" value="stars"> Stars
          </div>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <div class="form-group right">
+      <button type="submit" class="btn btn-outline-primary">Submit</button>
+      <button class="btn btn-outline-danger" id="reset">Reset</button>
+    </div>
     </form>
     <div id="show-price">
     </div>
-    <button class="btn btn-danger" id="reset">Reset</button>
   </div>
   </div>
 
