--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       </div>
       <div class="form-group right">
       <button type="submit" class="btn btn-outline-primary">Submit</button>
-      <button class="btn btn-outline-danger" id="reset">Reset</button>
+      <button type="button" class="btn btn-outline-danger" id="reset">Reset</button>
     </div>
     </form>
-    <div id="show-price">
-    </div>
+    <h2 id="show-price">
+    </h2>
   </div>
   </div>
 
