it will have fix some errors in the text of the html.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="jumbotron">
       <h1 id="header">Princess Peach's Pizzaria</h1>
       <hr class="my-4">
-      <p class="lead">Weclome to Princess Peach's Pizzaria! Here, in the Mushroom Kingdom, no one makes a mean pizza like Princess Peach! Indugle your taste buds and be transported to to the Mushroom Kingdom with your first bite of her famous pie! Due to her numerous
+      <p class="lead">Weclome to Princess Peach's Pizzaria! Here, in the Mushroom Kingdom, no one makes a mean pizza like Princess Peach! Indugle your taste buds and be transported to the Mushroom Kingdom with your first bite of her famous pie! Due to her numerous
         kidnappings, supply is limited... So order quick!</p>
     </div>
     <img src="img/pizza.jpg" id="pizza-product">
